📝 Add project documentation and setup files
- Added comprehensive .gitignore
- Created START_PORTAL.md quick start guide
- Set up proper directory structure with .gitkeep files
- Ready for Tyler's daily use

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,68 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Dependencies
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Build outputs
+.next/
+out/
+dist/
+build/
 
-# vercel
-.vercel
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# File storage (keep structure but ignore uploaded files)
+file-storage/uploads/*
+!file-storage/uploads/.gitkeep
+file-storage/secure/*
+!file-storage/secure/.gitkeep
+file-storage/metadata.json
+
+# AI brain data
+ai-brain/chat-history.json
+ai-brain/contexts/*
+!ai-brain/contexts/.gitkeep
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Dependency directories
+jspm_packages/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
