--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "td-studios-portal",
-  "version": "0.1.0",
+  "name": "td-studios-ai-beast",
+  "version": "1.0.0",
   "private": true,
-  "description": "Personal TD Studios Portal - A Notion-style command center for Tyler",
+  "description": "Tyler's AI Beast Desktop Software - Autonomous Business Automation & Website Cloning Engine",
+  "main": "electron/main.js",
+  "homepage": "./",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "server": "node server/index.js",
-    "dev:server": "nodemon server/index.js"
+    "dev:server": "nodemon server/index.js",
+    "electron": "electron .",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:pack": "electron-builder",
+    "electron:dist": "npm run build && npm run export && electron-builder",
+    "preelectron:pack": "npm run build && npm run export",
+    "preelectron:dist": "npm run build && npm run export"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -27,7 +36,17 @@
     "react-markdown": "^9.0.0",
     "uuid": "^9.0.1",
     "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "clsx": "^2.0.0",
+    "electron": "^28.0.0",
+    "electron-store": "^8.1.0",
+    "sqlite3": "^5.1.6",
+    "puppeteer": "^21.6.1",
+    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.6.2",
+    "node-cron": "^3.0.3",
+    "openai": "^4.20.1",
+    "fs-extra": "^11.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -42,6 +61,35 @@
     "@types/cors": "^2.8.13",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "electron-builder": "^24.8.0",
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.tdstudios.ai-beast",
+    "productName": "TD Studios AI Beast",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "electron/**/*",
+      "out/**/*",
+      "server/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "mac": {
+      "category": "public.app-category.business",
+      "icon": "assets/icon.icns"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icon.ico"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "assets/icon.png"
+    }
   }
 }
