--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "td-studios-ai-beast",
+  "name": "td-studios-ai-beast-portal",
   "version": "1.0.0",
   "private": true,
   "description": "Tyler's AI Beast Desktop Software - Autonomous Business Automation & Website Cloning Engine",
@@ -14,56 +14,57 @@
     "server": "node server/index.js",
     "dev:server": "nodemon server/index.js",
     "electron": "electron .",
-    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && NODE_ENV=development electron .\"",
     "electron:pack": "electron-builder",
     "electron:dist": "npm run build && npm run export && electron-builder",
     "preelectron:pack": "npm run build && npm run export",
     "preelectron:dist": "npm run build && npm run export"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.5",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-markdown": "^9.0.0",
-    "uuid": "^9.0.1",
-    "date-fns": "^2.30.0",
+    "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "electron": "^28.0.0",
     "electron-store": "^8.1.0",
-    "sqlite3": "^5.1.6",
-    "puppeteer": "^21.6.1",
-    "cheerio": "^1.0.0-rc.12",
-    "axios": "^1.6.2",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "next": "15.3.5",
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
-    "fs-extra": "^11.2.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "postcss": "^8.5.6",
+    "puppeteer": "^21.6.1",
+    "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "sqlite3": "^5.1.6",
+    "tailwindcss": "^3.4.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/express": "^4.17.17",
-    "@types/multer": "^1.4.7",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/uuid": "^9.0.2",
-    "@types/cors": "^2.8.13",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "nodemon": "^3.0.1",
-    "electron-builder": "^24.8.0",
     "concurrently": "^8.2.2",
+    "electron-builder": "^24.8.0",
+    "nodemon": "^3.0.1",
+    "typescript": "^5",
     "wait-on": "^7.2.0"
   },
   "build": {
