--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "description": "Tyler's AI Beast Desktop Software - Autonomous Business Automation & Website Cloning Engine",
   "main": "electron/main.js",
-  "homepage": "./",
+  "homepage": "https://td-studios-ai-beast-portal.vercel.app",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
@@ -30,20 +30,20 @@
     "date-fns": "^2.30.0",
     "electron": "^28.0.0",
     "electron-store": "^8.1.0",
-    "express": "^4.18.2",
+    "express": "^5.1.0",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "next": "15.3.5",
+    "multer": "^2.0.1",
+    "next": "^15.3.5",
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
     "path": "^0.12.7",
     "postcss": "^8.5.6",
     "puppeteer": "^21.6.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
@@ -58,8 +58,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.2",
     "concurrently": "^8.2.2",
     "electron-builder": "^24.8.0",
@@ -92,5 +92,15 @@
       "target": "AppImage",
       "icon": "assets/icon.png"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tdstudiosny/champagne-room-backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tdstudiosny/champagne-room-backend/issues"
   }
 }
